--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,9 +7,8 @@
 
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li class="navbar-right">
-        <a href="new/device"><span class="glyphicon glyphicon-user"></span> User Device</a>
-      </li>
+      <li class="navbar-right"><a href="/new/device"><span class="glyphicon glyphicon-user"></span> User Device</a></li>
+      <li class="navbar-right"><a href="/new/notification"><span class="glyphicon glyphicon-user"></span> Send Notification</a></li>
     </ul>
   </div>
 </nav>
